# betting-market-efficiency-model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md  phase_01_skeleton.md  phase_04_loaders.md  phase_05_hw_replication.md  phase_06_model.md  phase_08_calibration.md
notes/: README.md  phase_02_devig.md  phase_03_synth.md  phase_07_conformal.md  phase_09a_calibration_ablation.md  phase_09b_multiple_testing.md  phase_09c_power_analysis.md  phase_09d_layer2_null.md
results/tables/: calibration_ablation.csv  calibration_ablation.md  calibration_by_league.csv  calibration_pooled.csv  calibration_pooled.md  conformal_league_coverage.csv  conformal_league_coverage.md  conformal_season_results.csv  hw_bootstrap_cis.csv  hw_comparison_norm_vs_inv.csv  hw_comparison_norm_vs_inv.md  hw_replication_normalized.csv  hw_replication_normalized.md  null_simulation_results.csv  null_simulation_results.md  power_analysis_mde_table.csv  power_analysis_mde_table.md  power_simulation_e0.csv  reliability_diagram_data.csv
scripts/: diagnose_load.py  run_calibration.py  run_calibration_ablation.py  run_conformal.py  run_model.py  run_null_simulation.py  run_power_analysis.py  run_replication.py  smoke_test.py  test_e1.py
src/: calibration.py  conformal.py  devig.py  features.py  loaders.py  model.py  null_sim.py  postcal.py  power.py  replication.py  synth.py
tests/: test_calibration.py  test_conformal.py  test_devig.py  test_features_model.py  test_null_sim.py  test_postcal.py  test_power.py  test_synth_loaders.py
