[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "betting-market-efficiency-model"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pyarrow>=14.0",
    "openpyxl>=3.1",
    "lightgbm>=4.1",
    "scikit-learn>=1.3",
    "mapie>=0.7",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "tqdm>=4.66",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
